--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "APIKey":"YqFlCrmoO08ADHABgN3VlooD",
-    "SecrectKey":"5dojGyAsCG8vMG0N2lwW7lWvOk71Lu0G"
+    "SecretKey":"5dojGyAsCG8vMG0N2lwW7lWvOk71Lu0G"
 }
